messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: messaging_app-service
            port:
              number: 80
      # - path: /(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: messaging_app-service
      #       port:
      #         number: 80
